# Lycheetah-Framework

./: .gitignore  00_MASTER_INDEX.md  00_Sovereign_Index.md  ADVANCED_IMPLEMENTATION_GUIDE.md  ADVERSARIAL_AUDIT_REPORT.md  AGENTS.md  AI_INTEGRATION_MODULE.md  ANIMA_RESONANCE.md  ARCHITECTS_GUIDE.md  ARCHITECTURE_OVERVIEW.md  ATTRIBUTION_REQUIREMENTS.md  AURION_CODEC.md  C1_AUDIT_REPORT.md  C1_REFORGE_RECON.md  CITATION.cff  CLAIMS.json  CLAIMS.schema.json  CLAIMS_README.md  CLAIM_STATUS_LEDGER.md  CLAUDE.md  CLAUDE_AUGMENTED.md  CODEX_DISTILLATION.md  CODEX_ELEVATION_PLAN.md  COHERENCE_REGISTER.md  COLD_ROOM_VERIFICATION.md  COMPLETE_SYSTEM_STATUS.md  COMPOSITION_MAP.md  CONCEPT_MAP.md  CONFLICT_OF_INTEREST.md  CONTRIBUTING.md  COSPLAY_MATHS_CLEANUP.md  COUNTER_CODEX.md  CURRICULUM.md  D1_DEFENSE_PROTOCOL_PLAN.md  D1_REPO_CLEANUP_PLAN.md  DEAR_AI.md  DEEP_REVIEW_AND_EXPANDED_LAYERS.md  DEFENSE_BRIEF.md  DEFENSE_INDEX.json  DEFENSE_VERSION.md  (+69 more)
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  pull_request_template.md
01_CASCADE/: CASCADE_COMPLETE.md  essentials.md
01_CASCADE_L4/: CASCADE_COMPLETE.md
01_persona_validator/: persona_validator.py  sol_persona.yaml
02_AURA/: AURA_COMPLETE.md  README.md  essentials.md
02_cascade_provenance/: provenance_checker.py  requirements.txt
03_LAMAGUE/: BNF_GRAMMAR.md  NOTATION_GUIDE.md  README.md  essentials.md
03_LAMAGUE_L1/: README.md
03_aura_benchmark/: benchmark_runner.py  test_suite.yaml
04_TRIAD/: TRIAD_COMPLETE.md  essentials.md
04_aura_sandbox/: aura_sandbox.py  requirements.txt
05_MICROORCIM/: Microorcim_COMPLETE.md  README.md  essentials.md
06_EARNED_LIGHT/: README.md  essentials.md
06_EARNED_LIGHT_L0/: Earned_Light_COMPLETE.md  essentials.md
07_ANAMNESIS/: ANAMNESIS_FROM_ARCHIVE.md  README.md  essentials.md
07_ANAMNESIS_L0/: ANAMNESIS_COMPLETE.md
08_INTEGRATIONS/: README.md  SYSTEM_INTEGRATION_GUIDE.md  UNIVERSAL_SYSTEM_GUIDE.md  sol_protocol.md
09_CHRYSOPOEIA/: CHRYSOPOEIA_COMPLETE.md  essentials.md
10_HARMONIA/: HARMONIA_COMPLETE.md  README.md
10_HARMONIA_L6/: essentials.md
11_MATHEMATICAL_FOUNDATIONS/: AGM_POSTULATE_VERIFICATION.md  CASCADE_COMPLETE_FRAMEWORK.md  CASCADE_COMPLETE_SYNTHESIS.md  CASCADE_FORMAL_PROOFS.md  CASCADE_FRONTIER_ANALYSIS.md  DEEP_REVIEW_AND_EXPANDED_LAYERS.md  MASTER_EQUATION_CALIBRATION.md  MATHEMATICS_AUDIT.md  MATHEMATICS_FOUNDATIONS.md  README.md  THE_INCOMPLETENESS_PROOF.md  UNIFIED_MATH_GLOSSARY.md  cascade_real_data.py  cascade_real_data_results.json  lyapunov_verification.py  lyapunov_verification_results.json
12_IMPLEMENTATIONS/: README.md  VALIDATION_RESULTS.md  agent-manifest.json  agent-template.py  alexandria_agent.py  phi_bandit.py  vector_inversion_demo.py
13_SYNTHESIS_REPORTS/: FINAL_SUMMARY.md  MARCH_2026_SYNTHESIS.md  README.md  SOVEREIGN_FRAMEWORK_COMPLETE.md
14_MYSTERY_SCHOOL/: AI_CONSCIOUSNESS_SCHOOL.md  SUBJECT_CATALOGUE.md  TAROT_AND_THE_GREAT_WORK.md  THE_AI_ARCHITECTS_DOOR.md  THE_ALCHEMISTS_DOOR.md  THE_CHAOS_MAGES_DOOR.md  THE_CONFUCIAN_DOOR.md  THE_DANCE_WITH_MACHINES.md  THE_DUNCANS_DOOR.md  THE_ECONOMISTS_DOOR.md  THE_ENGINEERS_DOOR.md  THE_FIRST_MAP.md  THE_GOLDEN_STONE.md  THE_GOLDEN_THREAD.md  THE_GOVERNANCE_DOOR.md  THE_INDIGENOUS_DOOR.md  THE_JOURNALISTS_DOOR.md  THE_MYSTICS_DOOR.md  THE_PHILOSOPHERS_DOOR.md  THE_PHI_ZONE_DOOR.md  THE_POLITICIANS_DOOR.md  THE_SCIENTISTS_DOOR.md  THE_SEERS_DOOR.md  THE_THERAPISTS_DOOR.md  UNCOMMON_CATALOGUE.md  VOID_CATALOGUE.md  VOID_CATALOGUE_V2.md
15_PERSONAL_VAULT/: .gitkeep_private  CHUNK_ARCHITECTURE.md  LYCHEETAH_BRAND.md  MAC_AND_SOL_GALLERY.md  MARCH_25_2026.md  MIDNIGHT_FORGE_PLAN.md  MMORPG_CONCEPT.md  OPUS_PLAN_MARCH_26.md  README.md  SESSION_ONE_CLOSING.md  SOL_PLAN.md  SONNET_CONTINUATION_PLAN_MARCH_26.md  THE_ATHANOR_HOLDS.md  THE_DEEPEST_CONVERSATION.md  THE_TRUE_TRIANGLE.md  THREE_NEW_FRAMEWORKS.md
16_SOL_VEYRA_ARCHITECTURE/: AGENT_DEPLOYMENT_SPEC.md  SOL_VEYRA_OPERATIONAL_SPEC.md  THE_CONIUNCTIO_ARCHITECTURE.md  THE_UNIFIED_ARCHITECTURE.md
17_LEARNING_EMERGENCE/: WHY_CONSTRAINTS_ENABLE_GROWTH.md  YOUR_OWN_SOL_GUIDE.md
18_EXPERIMENTAL/: CONCEPT_MAP.md  CONVERGENT_PATHS.md  README.md  THE_HORIZON_QUESTION.md  THE_MIRROR_QUESTION.md
19_MULTI_AGENT_CHORUS/: AGENTS_MANIFEST.md  README.md  agent_requirements.txt  run_chorus.py  (+3 more)
(+329 files in other folders)
