[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lycheetah"
version = "0.3.0"
description = "A formal architecture for sovereign intelligence — CASCADE, AURA, TRIAD, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mackenzie Conor James Clark", email = "mac@lycheetah.nz"},
]
keywords = [
    "ai-alignment", "knowledge-architecture", "cascade", "aura", "triad",
    "constitutional-ai", "belief-revision", "truth-pressure", "lyapunov",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Lycheetah/Lycheetah-Framework"
Repository = "https://github.com/Lycheetah/Lycheetah-Framework"
"Issue Tracker" = "https://github.com/Lycheetah/Lycheetah-Framework/issues"

[tool.setuptools.packages.find]
where = ["12_IMPLEMENTATIONS"]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "active: tests for [ACTIVE] formally proven claims",
    "scaffold: tests for [SCAFFOLD] structural but unfinished claims",
    "conjecture: tests for [CONJECTURE] exploratory claims",
]
